tests/error/type_match/switch_expr_non_exhaustive.bz
function test(val: int32)
{
	let _ = switch (val) {
		0, 1, 2 => 0,
	};
}
